--- a/examples/container/containerv2/create_cluster.yaml
+++ b/examples/container/containerv2/create_cluster.yaml
@@ -1,402 +1,27 @@
-apiVersion: apiextensions.k8s.io/v1
-kind: CustomResourceDefinition
+apiVersion: container.containerv2.ibmcloud.crossplane.io/v1alpha1
+kind: Cluster
 metadata:
+  name: crossplane-1
   annotations:
-    controller-gen.kubebuilder.io/version: v0.2.4
-  creationTimestamp: null
-  name: clusters.container.containerv2.ibmcloud.crossplane.io
 spec:
-  group: container.containerv2.ibmcloud.crossplane.io
-  names:
-    categories:
-    - crossplane
-    - managed
-    - ibmcloud
-    kind: Cluster
-    listKind: ClusterList
-    plural: clusters
-    singular: cluster
-  scope: Cluster
-  versions:
-  - additionalPrinterColumns:
-    - jsonPath: .status.bindingPhase
-      name: STATUS
-      type: string
-    - jsonPath: .status.atProvider.state
-      name: STATE
-      type: string
-    - jsonPath: .spec.classRef.name
-      name: CLASS
-      type: string
-    - jsonPath: .metadata.creationTimestamp
-      name: AGE
-      type: date
-    name: v1alpha1
-    schema:
-      openAPIV3Schema:
-        description: Cluster contains all the info (spec + status) for a cluster
-        properties:
-          apiVersion:
-            description: 'APIVersion defines the versioned schema of this representation
-              of an object. Servers should convert recognized schemas to the latest
-              internal value, and may reject unrecognized values. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#resources'
-            type: string
-          kind:
-            description: 'Kind is a string value representing the REST resource this
-              object represents. Servers may infer this from the endpoint the client
-              submits requests to. Cannot be updated. In CamelCase. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#types-kinds'
-            type: string
-          metadata:
-            type: object
-          spec:
-            description: ClusterSpec defines the desired state of a Cluster.
-            properties:
-              deletionPolicy:
-                description: DeletionPolicy specifies what will happen to the underlying
-                  external when this managed resource is deleted - either "Delete"
-                  or "Orphan" the external resource. The "Delete" policy is the default
-                  when no policy is specified.
-                enum:
-                - Orphan
-                - Delete
-                type: string
-              forProvider:
-                description: ClusterCreateRequest contains the params used to create
-                  a cluster
-                properties:
-                  billing:
-                    type: string
-                  cosInstanceCRN:
-                    type: string
-                  defaultWorkerPoolEntitlement:
-                    type: string
-                  disablePublicServiceEndpoint:
-                    type: boolean
-                  kubeVersion:
-                    type: string
-                  name:
-                    type: string
-                  podSubnet:
-                    type: string
-                  provider:
-                    type: string
-                  serviceSubnet:
-                    type: string
-                  workerPool:
-                    description: WorkerPoolConfig is needed in order to create a cluster
-                    properties:
-                      diskEncryption:
-                        type: boolean
-                      entitlement:
-                        type: string
-                      flavor:
-                        type: string
-                      isolation:
-                        type: string
-                      labels:
-                        additionalProperties:
-                          type: string
-                        type: object
-                      name:
-                        type: string
-                      vpcID:
-                        type: string
-                      workerCount:
-                        type: integer
-                      zones:
-                        items:
-                          description: Zone info for the workes
-                          properties:
-                            id:
-                              type: string
-                            subnetID:
-                              type: string
-                          type: object
-                        type: array
-                    required:
-                    - entitlement
-                    - flavor
-                    - name
-                    - vpcID
-                    - workerCount
-                    - zones
-                    type: object
-                required:
-                - cosInstanceCRN
-                - defaultWorkerPoolEntitlement
-                - disablePublicServiceEndpoint
-                - kubeVersion
-                - name
-                - podSubnet
-                - provider
-                - serviceSubnet
-                - workerPool
-                type: object
-              providerConfigRef:
-                description: ProviderConfigReference specifies how the provider that
-                  will be used to create, observe, update, and delete this managed
-                  resource should be configured.
-                properties:
-                  name:
-                    description: Name of the referenced object.
-                    type: string
-                required:
-                - name
-                type: object
-              providerRef:
-                description: 'ProviderReference specifies the provider that will be
-                  used to create, observe, update, and delete this managed resource.
-                  Deprecated: Please use ProviderConfigReference, i.e. `providerConfigRef`'
-                properties:
-                  name:
-                    description: Name of the referenced object.
-                    type: string
-                required:
-                - name
-                type: object
-              writeConnectionSecretToRef:
-                description: WriteConnectionSecretToReference specifies the namespace
-                  and name of a Secret to which any connection details for this managed
-                  resource should be written. Connection details frequently include
-                  the endpoint, username, and password required to connect to the
-                  managed resource.
-                properties:
-                  name:
-                    description: Name of the secret.
-                    type: string
-                  namespace:
-                    description: Namespace of the secret.
-                    type: string
-                required:
-                - name
-                - namespace
-                type: object
-            required:
-            - forProvider
-            type: object
-          status:
-            description: ClusterStatus represents the observed state of a AccessGroup.
-            properties:
-              atProvider:
-                description: ClusterInfo contains the "observation" info
-                properties:
-                  addons:
-                    items:
-                      description: Addon ...
-                      properties:
-                        name:
-                          type: string
-                        version:
-                          type: string
-                      required:
-                      - name
-                      - version
-                      type: object
-                    type: array
-                  apiUser:
-                    type: string
-                  createdDate:
-                    format: date-time
-                    type: string
-                  crn:
-                    type: string
-                  dataCenter:
-                    type: string
-                  disableAutoUpdate:
-                    type: boolean
-                  entitlement:
-                    type: string
-                  features:
-                    description: Feat ...
-                    properties:
-                      keyProtectEnabled:
-                        type: boolean
-                      pullSecretApplied:
-                        type: boolean
-                    required:
-                    - keyProtectEnabled
-                    - pullSecretApplied
-                    type: object
-                  id:
-                    type: string
-                  ingress:
-                    description: IngresInfo ...
-                    properties:
-                      hostname:
-                        type: string
-                      secretName:
-                        type: string
-                    required:
-                    - hostname
-                    - secretName
-                    type: object
-                  isPaid:
-                    type: boolean
-                  lifecycle:
-                    description: LifeCycleInfo ...
-                    properties:
-                      masterHealth:
-                        type: string
-                      masterState:
-                        type: string
-                      masterStatus:
-                        type: string
-                      masterStatusModifiedDate:
-                        format: date-time
-                        type: string
-                      modifiedDate:
-                        format: date-time
-                        type: string
-                    required:
-                    - masterHealth
-                    - masterState
-                    - masterStatus
-                    - masterStatusModifiedDate
-                    - modifiedDate
-                    type: object
-                  location:
-                    type: string
-                  masterKubeVersion:
-                    type: string
-                  masterStatus:
-                    type: string
-                  masterURL:
-                    type: string
-                  multiAzCapable:
-                    type: boolean
-                  name:
-                    type: string
-                  ownerEmail:
-                    type: string
-                  podSubnet:
-                    type: string
-                  provider:
-                    type: string
-                  region:
-                    type: string
-                  resourceGroup:
-                    type: string
-                  resourceGroupName:
-                    type: string
-                  serverURL:
-                    type: string
-                  serviceEndpoints:
-                    description: Endpoints ...
-                    properties:
-                      privateServiceEndpointEnabled:
-                        type: boolean
-                      privateServiceEndpointURL:
-                        type: string
-                      publicServiceEndpointEnabled:
-                        type: boolean
-                      publicServiceEndpointURL:
-                        type: string
-                    required:
-                    - privateServiceEndpointEnabled
-                    - privateServiceEndpointURL
-                    - publicServiceEndpointEnabled
-                    - publicServiceEndpointURL
-                    type: object
-                  serviceSubnet:
-                    type: string
-                  state:
-                    type: string
-                  targetVersion:
-                    type: string
-                  type:
-                    type: string
-                  versionEOS:
-                    type: string
-                  vpcs:
-                    items:
-                      type: string
-                    type: array
-                  workerCount:
-                    type: integer
-                  workerZones:
-                    items:
-                      type: string
-                    type: array
-                required:
-                - addons
-                - apiUser
-                - createdDate
-                - crn
-                - dataCenter
-                - disableAutoUpdate
-                - entitlement
-                - features
-                - id
-                - ingress
-                - isPaid
-                - lifecycle
-                - location
-                - masterKubeVersion
-                - masterStatus
-                - masterURL
-                - multiAzCapable
-                - name
-                - ownerEmail
-                - podSubnet
-                - provider
-                - region
-                - resourceGroup
-                - resourceGroupName
-                - serverURL
-                - serviceEndpoints
-                - serviceSubnet
-                - state
-                - targetVersion
-                - type
-                - versionEOS
-                - vpcs
-                - workerCount
-                - workerZones
-                type: object
-              conditions:
-                description: Conditions of the resource.
-                items:
-                  description: A Condition that may apply to a resource.
-                  properties:
-                    lastTransitionTime:
-                      description: LastTransitionTime is the last time this condition
-                        transitioned from one status to another.
-                      format: date-time
-                      type: string
-                    message:
-                      description: A Message containing details about this condition's
-                        last transition from one status to another, if any.
-                      type: string
-                    reason:
-                      description: A Reason for this condition's last transition from
-                        one status to another.
-                      type: string
-                    status:
-                      description: Status of this condition; is it currently True,
-                        False, or Unknown?
-                      type: string
-                    type:
-                      description: Type of this condition. At most one of each condition
-                        type may apply to a resource at any point in time.
-                      type: string
-                  required:
-                  - lastTransitionTime
-                  - reason
-                  - status
-                  - type
-                  type: object
-                type: array
-            type: object
-        required:
-        - spec
-        type: object
-    served: true
-    storage: true
-    subresources:
-      status: {}
-status:
-  acceptedNames:
-    kind: ""
-    plural: ""
-  conditions: []
-  storedVersions: []
+  deletionPolicy: Delete
+  forProvider:
+    name: corssplane-1
+    disablePublicServiceEndpoint: true
+    provider: vpc-gen2
+    kubeVersion: 1.21.7_1541
+    podSubnet: 172.17.0.0/18
+    serviceSubnet: 172.21.0.0/16
+    cosInstanceCRN: 'crn:v1:bluemix:public:containers-kubernetes:us-south:a/0b5a00334eaf9eb9339d2ab48f20d7f5:c7jkited0fh21rkqk92g::'
+    defaultWorkerPoolEntitlement: ''
+    workerPool:
+      name: my-worker-pool
+      entitlement: ''
+      flavor: cx2.2x4
+      vpcID: r006-58c15986-7fdd-4a69-a4ee-211f50b14668
+      workerCount: 2
+      zones:
+        - id: us-south-1
+          subnetID: 0717-2af44258-e749-481a-868e-a7cc167464d0
+  providerConfigRef:
+    name: ibm-cloud
