--- a/examples/container/containerv2/create_cluster.yaml
+++ b/examples/container/containerv2/create_cluster.yaml
@@ -1,12 +1,12 @@
 apiVersion: container.containerv2.ibmcloud.crossplane.io/v1alpha1
 kind: Cluster
 metadata:
-  name: crossplane-1
+  name: metadata-name
   annotations:
 spec:
-  deletionPolicy: Delete
+  deletionPolicy: Orphan
   forProvider:
-    name: crossplane-1
+    name: crossplane-9
     disablePublicServiceEndpoint: true
     provider: vpc-gen2
     kubeVersion: 1.21.7_1541
