Creation/deletion works

--- a/examples/container/containerv2/create_cluster_minimal.yaml
+++ b/examples/container/containerv2/create_cluster_minimal.yaml
@@ -1,5 +1,5 @@
 apiVersion: container.containerv2.ibmcloud.crossplane.io/v1alpha1
-kind: Cluster
+kind: VPCKind
 metadata:
   name: crossplane-made-1
   annotations:
