--- a/examples/vpcv1/create_vpc.with_headers.yaml
+++ b/examples/vpcv1/create_vpc.with_headers.yaml
@@ -4,7 +4,7 @@ metadata:
   name: harry-vpc-3
   annotations:
 spec:
-  deletionPolicy: Orphan
+  deletionPolicy: Delete
   forProvider:
     classicAccess: false
     name: harry-vpc-3
