Added a VPC Controller. Fixed ref resolution for BucketConfig
Signed-off-by: Harry Stavropoulos <hstavrop@us.ibm.com>

--- a/examples/cos/bucket_config/full_spec.yaml
+++ b/examples/cos/bucket_config/full_spec.yaml
@@ -9,7 +9,7 @@ spec:
   forProvider:
     name:
     nameRef: 
-      name: configurable-1
+      name: harry-bucket-2
     nameSelector:
     hardQuota: 201
     metricsMonitoring:
