--- a/package/crds/container.containerv2.ibmcloud.crossplane.io_clusters.yaml
+++ b/package/crds/container.containerv2.ibmcloud.crossplane.io_clusters.yaml
@@ -101,6 +101,31 @@ spec:
                         type: string
                       vpcID:
                         type: string
+                      vpcRef:
+                        description: "Crossplane reference of the VPC name \n Note:
+                          \   One of 'VpcID', 'VPCRef', 'VPCSelector' should be specified"
+                        properties:
+                          name:
+                            description: Name of the referenced object.
+                            type: string
+                        required:
+                        - name
+                        type: object
+                      vpcSelector:
+                        description: Selects a reference to a VPC
+                        properties:
+                          matchControllerRef:
+                            description: MatchControllerRef ensures an object with
+                              the same controller reference as the selecting object
+                              is selected.
+                            type: boolean
+                          matchLabels:
+                            additionalProperties:
+                              type: string
+                            description: MatchLabels ensures an object with matching
+                              labels is selected.
+                            type: object
+                        type: object
                       workerCount:
                         type: integer
                       zones:
@@ -117,7 +142,6 @@ spec:
                     - entitlement
                     - flavor
                     - name
-                    - vpcID
                     - workerCount
                     - zones
                     type: object
@@ -178,7 +202,7 @@ spec:
             description: ClusterStatus represents the observed state of a AccessGroup.
             properties:
               atProvider:
-                description: ClusterInfo contains the "observation" info
+                description: ClusterObservation contains the "observation" info
                 properties:
                   addons:
                     items:
