--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -73,9 +73,10 @@ jobs:
       # version, but we prefer this action because it leaves 'annotations' (i.e.
       # it comments on PRs to point out linter violations).
       - name: Lint
-        uses: golangci/golangci-lint-action@v2
-        with:
-          version: ${{ env.GOLANGCI_VERSION }}
+        run: make lint
+        # uses: golangci/golangci-lint-action@v2
+        # with:
+        #   version: ${{ env.GOLANGCI_VERSION }}
 
   check-diff:
     runs-on: ubuntu-18.04
