--- a/.github/workflows/promote.yml
+++ b/.github/workflows/promote.yml
@@ -17,6 +17,7 @@ env:
   # credentials have been provided before trying to run steps that need them.
   DOCKER_USR: ${{ secrets.DOCKER_USR }}
   AWS_USR: ${{ secrets.AWS_USR }}
+  GO_VERSION: '1.18'
 
 jobs:
   promote-artifacts:
@@ -27,6 +28,11 @@ jobs:
         uses: actions/checkout@v2
         with:
           submodules: true
+          
+      - name: Setup Go
+        uses: actions/setup-go@v2
+        with:
+          go-version: ${{ env.GO_VERSION }}    
 
       - name: Fetch History
         run: git fetch --prune --unshallow
